# piraci-game

./: README.md
mainmanumyszka-5/: mainmanumyszka.sln
mainmanumyszka-5/mainmanumyszka/: Button.h  CMakeLists.txt  MainMenu.cpp  NaRazieSmieci.h  Piraci.cpp  Textbox.h  Zagadki.cpp  fabula.cpp  mainmanumyszka.vcxproj  mainmanumyszka.vcxproj.filters  polskieZnaki.cpp
mainmanumyszka-5/mainmanumyszka/Debug/: mainmanumyszka.exe.recipe  mainmanumyszka.ilk  vc143.idb
mainmanumyszka-5/mainmanumyszka/Debug/mainmanumyszka.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mainmanumyszka.lastbuildstate
mainmanumyszka-5/mainmanumyszka/Release/: mainmanumyszka.exe.recipe  mainmanumyszka.iobj  mainmanumyszka.ipdb
mainmanumyszka-5/mainmanumyszka/Release/mainmanumyszka.tlog/: Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mainmanumyszka.lastbuildstate
